# PetkubGrader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260528_0241_2ae930654675_initial_schema.py  20260528_0301_6fedb580889c_tz_aware_nullable_timestamps.py  20260528_0357_1ecdd5ae6119_sample_subtasks.py  20260528_0433_3cc46657c3cb_user_username_school.py
apps/api/app/: db.py  deps.py  main.py  models.py  settings.py
apps/api/app/routers/: admin.py  contests.py  judge0_callback.py  problems.py  ranking.py  submissions.py  topics.py  users.py
apps/api/app/services/: contest.py  grader.py  judge0.py  package.py  rate_limit.py  storage.py
apps/web/: .dockerignore  Dockerfile  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/contests/: page.tsx
apps/web/src/app/leaderboard/: page.tsx
apps/web/src/app/manage/: page.tsx
apps/web/src/app/pending/: page.tsx
apps/web/src/app/problems/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: code-editor.tsx  copy-button.tsx  nav-bar.tsx  pixel-icons.tsx  problem-search.tsx  sample-editor.tsx  testcase-upload.tsx  ui.tsx
apps/web/src/db/: client.ts  schema.ts
apps/web/src/lib/: api.ts  auth.ts  guard.ts
infra/caddy/: Caddyfile
infra/postgres/init/: 01-extensions.sql
(+14 files in other folders)
